bynkc/tests/fixtures/negative/232_send_drops_non_unit_reply/src/relay.bynk
context relay

consumes bynk { Fetch }

service api from http {
  on GET("/") by Visitor () -> Effect[HttpResult[String]] given Fetch {
    -- `~>` drops the reply, but Fetch.send returns Effect[Result[Response, FetchError]]
    -- — its error would vanish, so the error gate rejects this.
    ~> Fetch.send(Request { method: Get, url: "https://example.com", contentType: None, authorization: None, body: None })
    Ok("ok")
  }
}
